# mqt-ddvis

./: .gitignore  .gitmodules  .license-tools-config.json  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.md  README.md  binding.gyp  datamanager.js  noxfile.py  package-lock.json  package.json  procfile  server.js  start.sh
.github/: SECURITY.md  dependabot.yml  release-drafter.yml  renovate.json5
.github/workflows/: ci.yml  codeql-analysis.yml  deploy.yml  docker.yml  release-drafter.yml  templating.yml
cmake/: ExternalDependencies.cmake
cpp/dd_package/src/: DDcomplex.cpp  DDpackage.cpp
cpp/module/: QDDVer.cpp  QDDVer.h  QDDVis.cpp  QDDVis.h  module.cpp
cpp/sample_qasm/: 011_3_qubit_grover_50_.qasm  Bell state (2 qubits).qasm  Deutsch_Algorithm.qasm  GHZ state (3 qubits).qasm  Graph State (4 qubits).qasm  Graph State (6 qubits).qasm  Grover (3 qubits).qasm  Grover (4 qubits).qasm  Grover (5 qubits).qasm  Iterative QPE 3bit (2 qubits).qasm  Iterative QPE 4bit (2 qubits).qasm  Quantum Fourier Transform (3 qubits).qasm  Quantum Fourier Transform (4 qubits).qasm  Quantum Fourier Transform (5 qubits).qasm  Quantum Phase Estimation (3 qubits).qasm  Quantum Phase Estimation (4 qubits).qasm  Random Number Generator (1 qubit).qasm  W State (3 qubits).qasm  W State (4 qubits).qasm  W State (5 qubits).qasm  qft_4.qasm
data/: 1.dot  ffff127001.dot
public/: browserconfig.xml  index.html  simulation.html  site.webmanifest
public/javascripts/: algo_area.js  complex.js  event_script.js  highlighting.js  init.js  main.js  routes.js  script.js  simulation.js  verification.js
public/modules/highlight-within-textarea/: index.html  jquery.highlight-within-textarea.js
public/stylesheets/: algo_area.css  simulation.css  style.css  verification.css
public/views/: emulation.html  simulation.html  verification.html
routes/: index.js  users.js
